# Azure-Kinect-Sensor-SDK-1

./: CHANGELOG.md
examples/green_screen/: CMakeLists.txt  main.cpp  util.h
include/k4a/: k4a.h  k4a.hpp
include/k4ainternal/: image.h  usbcommand.h
src/color_mcu/: color_mcu.c
src/csharp/SDK/: Image.cs
src/csharp/SDK/Native/: NativeMethods.cs
src/depth_mcu/: depth_mcu.c
src/image/: image.c
src/sdk/: k4a.c
src/transformation/: CMakeLists.txt  rgbz.c
src/usbcommand/: usbcommand.c
tests/ColorTests/FunctionalTest/: color_ft.cpp
tests/IMUTests/FunctionalTest/: imu_ft.cpp
tests/latency/: latency_perf.cpp
tests/throughput/: throughput_perf.cpp
